--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <noscript>
       <p style="color: white;">
-        This website requires javascript, <a href="https://github.com/NepNep21/website" style="color: aqua;">its source code is here</a>.
+        This website requires javascript, <a href="https://github.com/NepNep21/NepNep21.github.io" style="color: aqua;">its source code is here</a>.
       </p>
     </noscript>
     <div id="app"></div>
