Attempt to add discord embed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nepu!</title>
 
+    <meta property="og:title" content="Nepu!">
+    <meta property="og:description" content="Hewwo :3 i'm nep">
+    <meta property="og:url" content="https://nepnep21.github.io/">
+    <meta property="og:image" content="https://nepnep21.github.io/media/pfp.png">
+
     <style>
       body {
         background-color: #212121;
