--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nepu!</title>
 
+    <meta name="description" content="Nep's website :3">
+
     <meta property="og:title" content="Nepu!">
     <meta property="og:description" content="Hewwo :3 i'm nep">
     <meta property="og:url" content="https://nepnep21.github.io/">
