--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     <meta property="og:url" content="https://nepnep21.github.io/">
     <meta property="og:image" content="https://nepnep21.github.io/media/pfp.png">
 
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+
     <style>
+      html, body {
+        height: 100%;
+      }
+
       body {
         background-color: #212121;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     </style>
   </head>
