--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
     <meta property="og:url" content="https://nepnep21.github.io/">
     <meta property="og:image" content="https://nepnep21.github.io/media/pfp.png">
 
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+
     <style>
+      html, body {
+        height: 100%;
+      }
+
       body {
         background-color: #212121;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     </style>
-    <script type="module" crossorigin src="/assets/index.87d84401.js"></script>
+    <script type="module" crossorigin src="/assets/index.30a30018.js"></script>
     <link rel="modulepreload" href="/assets/vendor.a3139610.js">
-    <link rel="stylesheet" href="/assets/index.4202ff98.css">
+    <link rel="stylesheet" href="/assets/index.a7b9e829.css">
   </head>
   <body>
     <noscript>
