--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
     <style>
+      html {
+        box-sizing: border-box;
+      }
+      
+      *, *:before, *:after {
+        box-sizing: inherit;
+      }
+
       html, body {
         height: 100%;
       }
