Add important project info and LICENSE

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Nepu!</title>
 
-    <meta name="description" content="Nep's website :3">
+    <meta name="description" content="Nep's website :3"/>
 
     <meta property="og:title" content="Nepu!">
-    <meta property="og:description" content="Hewwo :3 i'm nep">
-    <meta property="og:url" content="https://nepnep21.github.io/">
-    <meta property="og:image" content="https://nepnep21.github.io/media/pfp.png">
+    <meta property="og:description" content="Hewwo :3 i'm nep"/>
+    <meta property="og:url" content="https://nepnep21.github.io/"/>
+    <meta property="og:image" content="https://nepnep21.github.io/media/pfp.png"/>
 
-    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css"/>
+    <link rel="stylesheet" href="/src/style.css"/>
 
     <style>
       html {
