--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
       body {
         background-color: #212121;
         display: flex;
-        align-items: center;
-        justify-content: center;
+      }
+
+      #app {
+        margin: auto;
+        display: flex;
       }
     </style>
   </head>
