--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
       body {
         background-color: #212121;
         display: flex;
-        align-items: center;
-        justify-content: center;
+      }
+
+      #app {
+        margin: auto;
+        display: flex;
       }
     </style>
-    <script type="module" crossorigin src="/assets/index.a39c651e.js"></script>
+    <script type="module" crossorigin src="/assets/index.6af44480.js"></script>
     <link rel="modulepreload" href="/assets/vendor.fda58ee7.js">
-    <link rel="stylesheet" href="/assets/index.09096a2f.css">
+    <link rel="stylesheet" href="/assets/index.5c8d412c.css">
   </head>
   <body>
     <noscript>
