--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         display: flex;
       }
     </style>
-    <script type="module" crossorigin src="/assets/index.c8c27809.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.7593a83c.js">
+    <script type="module" crossorigin src="/assets/index.b4c98402.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.234f845c.js">
+    <link rel="stylesheet" href="/assets/vendor.043684b5.css">
     <link rel="stylesheet" href="/assets/index.5c8d412c.css">
   </head>
   <body>
